@@ -33,21 +33,21 @@ import org.apache.hadoop.mapred.InputFormat;
 public class partitionDesc implements Serializable, Cloneable {
   private static final long serialVersionUID = 2L;
 	private tableDesc table;
-  private java.util.LinkedHashMap<String, String> partSpec;  
+  private java.util.LinkedHashMap<String, String> partSpec;
   private java.lang.Class<? extends  org.apache.hadoop.hive.serde2.Deserializer> deserializerClass;
   private Class<? extends InputFormat> inputFileFormatClass;
   private Class<? extends HiveOutputFormat> outputFileFormatClass;
   private java.util.Properties properties;
   private String serdeClassName;
-  
+
   public partitionDesc() { }
-  
+
   public partitionDesc(
     final tableDesc table,
     final java.util.LinkedHashMap<String, String> partSpec) {
     this(table, partSpec, null, null, null, null, null);
   }
-  
+
   public partitionDesc(
   		final tableDesc table,
   		final java.util.LinkedHashMap<String, String> partSpec,
@@ -65,7 +65,7 @@ public class partitionDesc implements Serializable, Cloneable {
 		if (properties != null)
 			this.serdeClassName = properties.getProperty(org.apache.hadoop.hive.serde.Constants.SERIALIZATION_LIB);
   }
-  
+
   public partitionDesc(final org.apache.hadoop.hive.ql.metadata.Partition part)  throws HiveException{
   	this.table = Utilities.getTableDesc(part.getTable());
   	this.partSpec = part.getSpec();
@@ -83,7 +83,7 @@ public class partitionDesc implements Serializable, Cloneable {
   public void setTableDesc(final tableDesc table) {
     this.table = table;
   }
-  
+
   @explain(displayName="partition values")
   public java.util.LinkedHashMap<String, String> getPartSpec() {
     return this.partSpec;
@@ -91,23 +91,23 @@ public class partitionDesc implements Serializable, Cloneable {
   public void setPartSpec(final java.util.LinkedHashMap<String, String> partSpec) {
     this.partSpec=partSpec;
   }
-  
+
   public java.lang.Class<? extends  org.apache.hadoop.hive.serde2.Deserializer> getDeserializerClass() {
 		if (this.deserializerClass == null && this.table !=null)
 			setDeserializerClass(this.table.getDeserializerClass());
     return this.deserializerClass;
   }
-  
+
   public void setDeserializerClass(final java.lang.Class<? extends  org.apache.hadoop.hive.serde2.Deserializer> serdeClass) {
     this.deserializerClass = serdeClass;
   }
-  
+
   public Class<? extends InputFormat> getInputFileFormatClass() {
   	if (this.inputFileFormatClass == null && this.table !=null)
   		setInputFileFormatClass (this.table.getInputFileFormatClass());
     return this.inputFileFormatClass;
   }
-  
+
   /**
    * Return a deserializer object corresponding to the tableDesc
    */
@@ -116,28 +116,28 @@ public class partitionDesc implements Serializable, Cloneable {
     de.initialize(null, properties);
     return de;
   }
-  
+
   public void setInputFileFormatClass(final Class<? extends InputFormat> inputFileFormatClass) {
     this.inputFileFormatClass=inputFileFormatClass;
   }
-  
+
   public Class<? extends HiveOutputFormat> getOutputFileFormatClass() {
   	if (this.outputFileFormatClass == null && this.table !=null)
   		setOutputFileFormatClass( this.table.getOutputFileFormatClass());
     return this.outputFileFormatClass;
   }
-  
+
   public void setOutputFileFormatClass(final Class<?> outputFileFormatClass) {
     this.outputFileFormatClass = HiveFileFormatUtils.getOutputFormatSubstitute(outputFileFormatClass);
   }
-  
+
   @explain(displayName="properties", normalExplain=false)
   public java.util.Properties getProperties() {
     if(this.table !=null)
       return this.table.getProperties();
     return this.properties;
   }
-  
+
   public void setProperties(final java.util.Properties properties) {
     this.properties = properties;
   }
@@ -156,22 +156,22 @@ public class partitionDesc implements Serializable, Cloneable {
   public void setSerdeClassName(String serdeClassName) {
     this.serdeClassName = serdeClassName;
   }
-  
+
   @explain(displayName="name")
   public String getTableName() {
     return getProperties().getProperty(org.apache.hadoop.hive.metastore.api.Constants.META_TABLE_NAME);
   }
-  
+
   @explain(displayName="input format")
   public String getInputFileFormatClassName() {
     return getInputFileFormatClass().getName();
   }
-  
+
   @explain(displayName="output format")
   public String getOutputFileFormatClassName() {
     return getOutputFileFormatClass().getName();
   }
-  
+
   public partitionDesc clone() {
   	partitionDesc ret = new partitionDesc();
 
@@ -181,7 +181,7 @@ public class partitionDesc implements Serializable, Cloneable {
     ret.outputFileFormatClass = this.outputFileFormatClass;
     if(this.properties != null) {
       Properties newProp = new Properties();
-      Enumeration<Object> keysProp = properties.keys(); 
+      Enumeration<Object> keysProp = properties.keys();
       while (keysProp.hasMoreElements()) {
         Object key = keysProp.nextElement();
         newProp.put(key, properties.get(key));
@@ -189,8 +189,11 @@ public class partitionDesc implements Serializable, Cloneable {
       ret.setProperties(newProp);
     }
   	ret.table = (tableDesc)this.table.clone();
-  	ret.partSpec = new java.util.LinkedHashMap<String, String>();
-  	ret.partSpec.putAll(this.partSpec);
+    // The partition spec is not present
+    if (this.partSpec != null) {
+      ret.partSpec = new java.util.LinkedHashMap<String, String>();
+      ret.partSpec.putAll(this.partSpec);
+    }
   	return ret;
   }
 }
