@@ -1,0 +1,27 @@
+PREHOOK: query: drop table nulltbl
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table nulltbl
+POSTHOOK: type: DROPTABLE
+PREHOOK: query: create table nulltbl(key int) partitioned by (ds string)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: create table nulltbl(key int) partitioned by (ds string)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@nulltbl
+PREHOOK: query: select key from nulltbl where ds='101'
+PREHOOK: type: QUERY
+PREHOOK: Output: file:/data/users/njain/hive1/hive1/build/ql/tmp/1897224698/10000
+POSTHOOK: query: select key from nulltbl where ds='101'
+POSTHOOK: type: QUERY
+POSTHOOK: Output: file:/data/users/njain/hive1/hive1/build/ql/tmp/1897224698/10000
+PREHOOK: query: select count(1) from nulltbl where ds='101'
+PREHOOK: type: QUERY
+PREHOOK: Output: file:/data/users/njain/hive1/hive1/build/ql/tmp/1803910053/10000
+POSTHOOK: query: select count(1) from nulltbl where ds='101'
+POSTHOOK: type: QUERY
+POSTHOOK: Output: file:/data/users/njain/hive1/hive1/build/ql/tmp/1803910053/10000
+0
+PREHOOK: query: drop table nulltbl
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table nulltbl
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@nulltbl
